Return multiple statuses per SLO
